# Stocks-AI-Agent

./: README.md
Server/: .gitignore  README_MULTI_USER.md  TELEGRAM_INTEGRATION.md  manage_users.py  pyproject.toml
Server/app/db/: db.connection.py
Server/app/db/models/: fundamentals.models.py  mutualFundsData.models.py  sentiments.models.py  technicals.models.py
Server/app/db/schemas/: fundamentals.schemas.py
Server/app/rag/: graph.py
Server/app/resources/: bucketStocks.json  users.list.json
Server/app/resources/fundamentals/: RELIANCE.fundamentals.json
Server/app/resources/mutalFundsData/: RELIANCE.mutalFund.json
Server/app/resources/sentiments/: RELIANCE.sentiments.json
Server/app/resources/technicals/: RELIANCE.technicals.json
Server/app/utils/: telegram.py
