[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "python-telegram-bot>=22.2",
    "requests>=2.32.4",
]
